ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumber__c</fullName>
    <label>Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>