ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/RefinanceAmount__c.field-meta.xml
<CustomField>
    <fullName>RefinanceAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refinance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>