ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/RefinanceExitCosts__c.field-meta.xml
<CustomField>
    <fullName>RefinanceExitCosts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refinance Exit Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>