ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/RefinanceType__c.field-meta.xml
<CustomField>
    <fullName>RefinanceType__c</fullName>
    <label>Refinance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Out</fullName>
            </value>
            <value>
                <fullName>Limited Cash Out</fullName>
            </value>
            <value>
                <fullName>No Cash Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>