ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/RequirementsAndObjectives__c.field-meta.xml
<CustomField>
    <fullName>RequirementsAndObjectives__c</fullName>
    <label>Requirements And Objectives</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>