ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/SettledLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>SettledLoanAmount__c</fullName>
    <label>Settled Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>