ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/SettlementDate__c.field-meta.xml
<CustomField>
    <fullName>SettlementDate__c</fullName>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>