ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/SpecificRefinanceGoal__c.field-meta.xml
<CustomField>
    <fullName>SpecificRefinanceGoal__c</fullName>
    <label>Specific Refinance Goal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoanRefinanceSpecificGoals</valueSetName>
    </valueSet>
</CustomField>