ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STILL_RESEARCHING</fullName>
                <label>Still researching</label>
            </value>
            <value>
                <fullName>THINKING_MAKING_OFFER</fullName>
                <label>Thinking of making an offer</label>
            </value>
            <value>
                <fullName>PLANNING_AUCTION_BID</fullName>
                <label>Planning to bid at auction</label>
            </value>
            <value>
                <fullName>SIGNED_PURCHASE_CONTRACT</fullName>
                <label>Signed and exchanged a contract of sale</label>
            </value>
            <value>
                <fullName>GOING_TO_OPEN_HOUSES</fullName>
                <label>Going to Open Houses</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>