ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/SurplusAB__c.field-meta.xml
<CustomField>
    <fullName>SurplusAB__c</fullName>
    <formula>TotalFundsRequiredA__c -  TotalFundsAvailableB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus (A-B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>