ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Thereasonforselectingtheproduct__c.field-meta.xml
<CustomField>
    <fullName>Thereasonforselectingtheproduct__c</fullName>
    <label>The reason for selecting the product</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>