ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalAssets__c.field-meta.xml
<CustomField>
    <fullName>TotalAssets__c</fullName>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>