ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalATOTax__c.field-meta.xml
<CustomField>
    <fullName>TotalATOTax__c</fullName>
    <label>Total ATO Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>