ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalAwaitingDocuments__c.field-meta.xml
<CustomField>
    <fullName>TotalAwaitingDocuments__c</fullName>
    <label>Total Awaiting Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>