ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/totalCalculatedMonthlyDebtExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalCalculatedMonthlyDebtExpenses__c</fullName>
    <label>Total Calculated Monthly Debt Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>