ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalCalculatedMonthlyLivingExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalCalculatedMonthlyLivingExpenses__c</fullName>
    <label>Total Calculated Monthly Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>