ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalDebtConsolidation__c.field-meta.xml
<CustomField>
    <fullName>TotalDebtConsolidation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Debt Consolidation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>