ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/totalDeclaredDebtExposure__c.field-meta.xml
<CustomField>
    <fullName>totalDeclaredDebtExposure__c</fullName>
    <label>Total Declared Debt Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>