ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/totalDeclaredMonthlyDebtExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalDeclaredMonthlyDebtExpenses__c</fullName>
    <label>Total Declared Monthly Debt Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>