ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalDeclaredMonthlyExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalDeclaredMonthlyExpenses__c</fullName>
    <formula>totalDeclaredMonthlyDebtExpenses__c +  totalDeclaredMonthlyLivingExpenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Declared Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>