ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/totalDeclaredMonthlyLivingExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalDeclaredMonthlyLivingExpenses__c</fullName>
    <label>Total Declared Monthly Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>