ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalExpenses__c</fullName>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>