ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalFinancialAssets__c.field-meta.xml
<CustomField>
    <fullName>TotalFinancialAssets__c</fullName>
    <label>Total Financial Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>