ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalFinancialLiabilities__c.field-meta.xml
<CustomField>
    <fullName>TotalFinancialLiabilities__c</fullName>
    <label>Total Financial Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>