ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalFundsAvailableB__c.field-meta.xml
<CustomField>
    <fullName>TotalFundsAvailableB__c</fullName>
    <formula>DepositPaid__c + AdditionalUpfrontContributions__c +  FHOG__c +  LoanAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funds Available (B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>