ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalFundsRequiredA__c.field-meta.xml
<CustomField>
    <fullName>TotalFundsRequiredA__c</fullName>
    <formula>PropertyPurchaseAmount__c +  TotalLoanCosts__c +  RefinanceAmount__c +  TotalDebtConsolidation__c + CashOutAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funds Required (A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>