ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/totalGrossMonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>totalGrossMonthlyIncome__c</fullName>
    <label>Total Gross Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>