ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalIncomes__c.field-meta.xml
<CustomField>
    <fullName>TotalIncomes__c</fullName>
    <label>Total Incomes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>