ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalLiabilityBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalLiabilityBalance__c</fullName>
    <label>Total Liability Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>