ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalLiabilityLimit__c.field-meta.xml
<CustomField>
    <fullName>TotalLiabilityLimit__c</fullName>
    <label>Total Liability Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>