ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalLoanCosts__c.field-meta.xml
<CustomField>
    <fullName>TotalLoanCosts__c</fullName>
    <formula>LenderApplicationFee__c +  LenderValuationFee__c +  OtherLenderFees__c +  LMI__c +  ConveyancingFees__c +  GovernmentMortgageRegistrationFee__c +  GovernmentStampDuty__c +  GovernmentTransferFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Loan Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>