ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/TotalMonthlyFinancialLiabilities__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyFinancialLiabilities__c</fullName>
    <label>Total Monthly Financial Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>