ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/totalRetrievedMonthlyLivingExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalRetrievedMonthlyLivingExpenses__c</fullName>
    <label>Total Retrieved Monthly Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>