ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/totalUntaxedMonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>totalUntaxedMonthlyIncome__c</fullName>
    <label>Total Untaxed Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>