ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/UMI__c.field-meta.xml
<CustomField>
    <fullName>UMI__c</fullName>
    <inlineHelpText>Uncommitted monthly income refers to the portion of a borrower&apos;s income that is available after deducting their monthly debt obligations. It represents the amount of income that can be allocated towards new loan repayments, indicating the borrower&apos;s capacity to take on additional debt.</inlineHelpText>
    <label>UMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>