ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/UpfrontCommissionAuto__c.field-meta.xml
<CustomField>
    <fullName>UpfrontCommissionAuto__c</fullName>
    <formula>LoanAmount__c * Lender__r.UpfrontCommissionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upfront Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>