ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/VerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>VerificationStatus__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>