ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/WeeklyHemValue__c.field-meta.xml
<CustomField>
    <fullName>WeeklyHemValue__c</fullName>
    <label>Weekly Hem Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>