ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>LenderLogo__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>LoanAmount__c</columns>
    <columns>ApplicationStatus__c</columns>
    <columns>ClosedStatus__c</columns>
    <columns>LoanPurpose__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
</ListView>