ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/listViews/Team_Pipeline.listView-meta.xml
<ListView>
    <fullName>Team_Pipeline</fullName>
    <columns>LenderLogo__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>LoanAmount__c</columns>
    <columns>ApplicationStatus__c</columns>
    <columns>ClosedStatus__c</columns>
    <columns>LoanPurpose__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApplicationStatus__c</field>
        <operation>notEqual</operation>
        <value>1848</value>
    </filters>
    <label>Team Pipeline</label>
</ListView>